fix letter spacing in fullbutton class

--- a/src/components/buttons/_buttons.scss
+++ b/src/components/buttons/_buttons.scss
@@ -24,7 +24,7 @@
     font-family: inherit;
     font-size: 16px;
     font-weight: 600;
-    letter-spacing: 0.03em;
+    letter-spacing: 0.06em;
     line-height: 1;
     opacity: 1;
     outline: 0px;
